2012-02-02  Anders Carlsson  <andersca@apple.com>

        Add ScrollingTree class
        https://bugs.webkit.org/show_bug.cgi?id=77695

        Reviewed by Andreas Kling.

        * WebCore.xcodeproj/project.pbxproj:
        Add new files.

        * page/scrolling/ScrollingCoordinator.cpp:
        (WebCore::ScrollingCoordinator::ScrollingCoordinator):
        Create a scrolling tree.

        (WebCore::ScrollingCoordinator::~ScrollingCoordinator):
        Assert that the scrolling tree is null.

        (WebCore::ScrollingCoordinator::pageDestroyed):
        Null out the scrolling tree member variable and tell it to invalidate itself.

        * page/scrolling/ScrollingTree.cpp: Added.

        (WebCore::ScrollingTree::invalidate):
        Null out the scrolling coordinator, breaking the reference cycle between the scrolling
        coordinator and the scrolling tree.
    
        * page/scrolling/ScrollingTree.h: Added.

2012-02-02  Tim Dresser  <tdresser@chromium.org>

        Refactor plugin drawing to be more data driven
        https://bugs.webkit.org/show_bug.cgi?id=76715

        Reviewed by James Robinson.

        CCPluginLayerImpl no longer handles drawing itself, but produces a list of CCPluginDrawQuads.
        These quads are then drawn by LayerRendererChromium.

        CCLayerImpl::willDraw(LayerRendererChromium*) is called directly before appendQuads.
        This allows for CCLayerImpl objects to allocate textures before appendQuads is called.

        This is a refactor, so no new tests were added.
        Flash was tested manually on Linux and Mac.

        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::PluginProgramBinding::set):
        (PluginProgramBinding):
        (WebCore):
        (WebCore::TexStretchPluginProgramBinding::set):
        (TexStretchPluginProgramBinding):
        (WebCore::TexTransformPluginProgramBinding::set):
        (TexTransformPluginProgramBinding):