@@ -1,3 +1,13 @@
+2012-02-02  Ami Fischman  <fischman@chromium.org>
+
+        Avoid crashing renderer when GPU process dies by not caching textures between video frames.
+        https://bugs.webkit.org/show_bug.cgi?id=77654
+
+        Reviewed by James Robinson.
+
+        * platform/graphics/chromium/cc/CCVideoLayerImpl.cpp:
+        (WebCore::CCVideoLayerImpl::draw):
+
 2012-02-02  Anders Carlsson  <andersca@apple.com>
 
         Add ScrollingTree class
